js/src/tests/test262/built-ins/Error/is-a-constructor.js
assert
.
sameValue
(
isConstructor
(
Error
)
true
'
isConstructor
(
Error
)
must
return
true
'
)
;
new
Error
(
)
;
reportCompare
(
0
0
)
;
